tests/snapshots/proof_error_snapshots__argument_proposition_mismatch.snap
---
source: tests/proof_error_snapshots.rs
expression: formatted
---
error chain:
  - command error
  - unification failed: argument proposition mismatch: expected foo, but got bar
tests/proof_errors/argument_proposition_mismatch.shari:10:26

      (assume foo, «foo») «bar»
                         ^^^^^^

fixture: tests/proof_errors/argument_proposition_mismatch.shari
