tests/snapshots/proof_error_snapshots__assume_not_proposition.snap
---
source: tests/proof_error_snapshots.rs
expression: formatted
---
error chain:
  - command error
  - unification failed: not a proposition: X
6:17

const bad_type : X
                ^^

fixture: tests/proof_errors/assume_not_proposition.shari
