tests/snapshots/proof_error_snapshots__assumption_not_proposition.snap
---
source: tests/proof_error_snapshots.rs
expression: formatted
---
error chain:
  - command error
  - unification failed: not a proposition: X
fixture: tests/proof_errors/assumption_not_proposition.shari
