tests/snapshots/proof_error_snapshots__bad_implication.snap
---
source: tests/proof_error_snapshots.rs
expression: formatted
---
error chain:
  - command error
  - unification failed: proposition mismatch: expected imp foo bar
fixture: tests/proof_errors/bad_implication.shari
