tests/snapshots/proof_error_snapshots__change_proposition_mismatch.snap
---
source: tests/proof_error_snapshots.rs
expression: formatted
---
error chain:
  - command error
  - unification failed: propositions mismatch in change: pf_bar
target = foo
expr_prop = bar
6:55

lemma change_proposition_mismatch : foo := change foo, pf_bar
                                                      ^^^^^^^

fixture: tests/proof_errors/change_proposition_mismatch.shari
