tests/snapshots/proof_error_snapshots__change_target_not_proposition.snap
---
source: tests/proof_error_snapshots.rs
expression: formatted
---
error chain:
  - command error
  - unification failed: not a proposition: Prop → Prop
tests/proof_errors/change_target_not_proposition.shari:3:12

const bad : Prop → Prop
           ^^^^^^^^^^^^

fixture: tests/proof_errors/change_target_not_proposition.shari
