tests/snapshots/proof_error_snapshots__local_structure_type_escape.snap
---
source: tests/proof_error_snapshots.rs
expression: formatted
---
error chain:
  - command error
  - eigenvariable condition violated: local structure type `foo` escapes
fixture: tests/proof_errors/local_structure_type_escape.shari
