tests/snapshots/proof_error_snapshots__non_ground_class_constraint.snap
---
source: tests/proof_error_snapshots.rs
expression: formatted
---
error chain:
  - command error
  - unification failed: could not synthesize instance
fixture: tests/proof_errors/non_ground_class_constraint.shari
